# kks-mlflow-research

./: .dockerignore  Dockerfile  LICENSE  image-btp.sh  pyproject.toml
.github/workflows/: cicd-for-push.yml  cicd-for-tag.yml
kks_mlflow_research/: ml_first.py
mlartifacts/0/5f0f70b7809d48cd97efa54fb3ce59db/artifacts/model/: MLmodel  model.pkl
mlartifacts/0/6927469b14af43f5a6d51a8d0f4b2b51/artifacts/: estimator.html
mlartifacts/0/6927469b14af43f5a6d51a8d0f4b2b51/artifacts/model/: MLmodel  conda.yaml  model.pkl
mlruns/0/: meta.yaml
mlruns/0/5f0f70b7809d48cd97efa54fb3ce59db/: meta.yaml
mlruns/0/5f0f70b7809d48cd97efa54fb3ce59db/metrics/: training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
mlruns/0/5f0f70b7809d48cd97efa54fb3ce59db/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/0/6927469b14af43f5a6d51a8d0f4b2b51/: meta.yaml
mlruns/0/6927469b14af43f5a6d51a8d0f4b2b51/metrics/: training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
mlruns/0/6927469b14af43f5a6d51a8d0f4b2b51/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/datasets/215359cd85720de54d9ec5349838ab80/: meta.yaml
mlruns/0/datasets/54a25ea7668e9d7a60efa0ab7c29ec5f/: meta.yaml
mlruns/0/datasets/9882d5ee65e7fa423215fe0d2a04ea96/: meta.yaml
mlruns/0/datasets/d7a6f31180e4e174110ca7f495df9cab/: meta.yaml
mlruns/models/kks-basemodel-llama-3.1/: meta.yaml
(+4 files in other folders)
