[tool.poetry]
name = "kks-mlflow-research"
version = "0.1.0"
description = ""
authors = ["Kilsoo Kang <kilsoo75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.19.0"


[tool.poetry.group.quality.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
